# flux-platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  conftest.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
agent/: __init__.py
agent/llm/: __init__.py  bridge.py  providers.py
agent/mcp/: __init__.py  client.py  protocol.py  server.py  transport.py
agent/memory/: __init__.py  buffer.py  factory.py  file_provider.py  models.py  protocol.py  redis_provider.py
agent/runtime/: __init__.py  batch.py  models.py  pipeline.py  protocol.py  react.py
agent/skills/: __init__.py  builtins.py  models.py  registry.py
agent/tools/: __init__.py  builtins.py  models.py  registry.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
core/kg/: __init__.py  config.py  config_validator.py  crispe.py  cypher_builder.py  cypher_corrector.py  cypher_validator.py  exceptions.py  fulltext.py  hallucination_detector.py  maritime_factories.py  ontology_bridge.py  pipeline.py  project.py  quality_gate.py  query_generator.py  types.py
core/workflow/: __init__.py  base_node.py  execution_worker.py  executor.py  models.py  registry.py  scheduler.py
docs/: API_REFERENCE.md  ARCHITECTURE_DETAIL_IMSP.md  COM-005_GitHub_산출물_관리.md  DEPLOYMENT_GUIDE.md  DES-001_지식그래프_모델_설계서.md  DES-002_멀티모달_데이터_통합_설계서.md  DES-003_ETL_파이프라인_설계서.md  DES-004_자연어_탐색_아키텍처_설계서.md  DES-005_분류체계_설계서.md  KG_Builder_가이드.md  KRISO_협조요청서.md  MTG-001_착수미팅_일정안.pptx  MTG-001_통합일정표.pptx  PLAN_2026_1차년도_실행계획.md  PRD.md  REQ-001_AIS_표준분석템플릿_draft.md  REQ-001_데이터제공처_현황조사서_draft.md  REQ-001_멀티모달_데이터인벤토리_draft.md  REQ-001_연계규칙_식별자체계_draft.md  REQ-001_우선순위_선정표_draft.md  REQ-001_해사_KG_동향_조사.md  REQ-002_KG_구축_대상_자원_선정.md  REQ-003_그래프DB_기술_비교.md  REQ-004_IHO_S100_표준_분석.md  RFP-보강_K8S_S100_전략.md  RPT-001_과업_완료_보고서.md  RUNBOOK.md  SFR-003_Text-to-Cypher_시각화_기능명세.md  TER-001_테스트계획서.md  api_etl_endpoints.md  architecture_flux_platform.md  evaluation_questions_100.xlsx  evaluation_questions_300.xlsx  evaluation_report.md  grounding_architecture.html  lightrag_study.md  meeting_20260318_KRISO.md  ontology_diagram.md  ontology_interactive.html  ontology_overview.html  (+8 more)
docs/architecture/: 00-terminology.md  01-system-context.md  02-system-architecture.md  03-component-architecture.md  04-data-architecture.md  05-deployment-architecture.md  06-security-architecture.md  07-data-flow.md  08-suredata-integration.md  09-tech-stack.md  10-observability.md  11-ai-llm.md  12-design-principles.md  13-roadmap.md  14-directory-structure.md  15-platform-operations.md  16-architecture-review.md  17-error-handling.md  18-api-standards.md  19-migration-strategy.md  20-nlp-ner.md  21-visualization.md  22-kg-advanced.md  README.md
docs/ontology/: cooperation.html  index.html  kickoff-report.html  meetings.html  vercel.json  (+12 more)
domains/: __init__.py
examples/: embedding_demo.py  etl_api_usage.py  kg_usage.py
gateway/: __init__.py  __main__.py  app.py  config.py  server.py
infra/: docker-compose.yml
rag/: __init__.py
scripts/: __main__.py  backup.py  generate_eval_excel.py  migrate_project_labels.py
tests/: conftest.py
ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
(+617 files in other folders)
