[project]
name = "maritime-kg"
version = "0.1.0"
description = "대화형 해사서비스 플랫폼을 위한 지식그래프 모델"
authors = [
    {name = "인사이트마이닝", email = "info@insightmining.io"},
]
keywords = ["maritime", "knowledge-graph", "neo4j", "kriso", "ontology", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = {text = "Proprietary"}
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "neo4j~=5.26.0",
    "python-dotenv~=1.0.1",
    "langchain~=0.3.14",
    "langchain-neo4j~=0.5.0",
    "langchain-ollama~=0.3.0",
    "requests~=2.32.3",
    "beautifulsoup4~=4.12.3",
    "fastapi~=0.109.0",
    "uvicorn[standard]~=0.34.0",
    "pydantic>=2.0,<3.0",
    "neo4j-graphrag[ollama]~=1.13.0",
    "PyJWT>=2.0.0,<3.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-randomly>=3.15.0",
    "hypothesis>=6.100.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "httpx>=0.25.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
]
qdrant = [
    "qdrant-client>=1.12.0,<2.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kg*", "maritime*", "agent*", "rag*", "gateway*"]

[tool.pytest.ini_options]
pythonpath = [".", "core", "domains"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:httpx._client",
    "ignore::PendingDeprecationWarning:starlette.formparsers",
    "ignore::pytest.PytestRemovedIn8Warning",
]
markers = [
    "unit: Pure Python unit tests (no external dependencies)",
    "integration: Tests requiring Neo4j connection",
    "e2e: End-to-end scenario tests",
    "slow: Long-running tests (benchmarks, stress tests)",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "S"]
ignore = ["E501", "S310", "S311", "S101", "S110"]  # E501: line length; S310: urlopen; S311: random; S101: assert; S110: try-except-pass

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106", "S107", "S110"]  # Hardcoded credentials and intentional pass blocks in tests

[tool.ruff.lint.isort]
known-first-party = ["kg", "maritime"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["kg", "maritime", "agent", "rag", "gateway"]
omit = ["kg/crawlers/*", "maritime/crawlers/*", "maritime/schema/*", "maritime/rbac/*", "kg/utils/verification.py", "*/test_*", "maritime/poc/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
